passwords match validation

--- a/TodoApp/src/main/webapp/customer/index.html
+++ b/TodoApp/src/main/webapp/customer/index.html
@@ -43,6 +43,7 @@
 <script type="text/javascript" src="../common/controllers/root/UnauthorizedController.js"></script>
 
 <script type="text/javascript" src="../common/util/HttpService.js"></script>
+<script type="text/javascript" src="../common/util/Directives.js"></script>
 <script type="text/javascript" src="../common/util/AppConstants.js"></script>
 <script type="text/javascript" src="../common/util/Services.js"></script>
 <script type="text/javascript" src="../common/util/Interceptors.js"></script>
