--- a/TodoApp/src/main/webapp/customer/pages/root/sign-in/password-do-reset.html
+++ b/TodoApp/src/main/webapp/customer/pages/root/sign-in/password-do-reset.html
@@ -10,14 +10,16 @@
 				<label for="password" class="width-full mt-3 text-left font-weight-600">Password</label> 
 				<input type="password" id="password" ng-model="password" pattern=".{6,}"
 					   class="form-control form-control-signin rounded" required> 
-				<div class="invalid-tooltip font12">
-		        	Invalid password
+				<div class="invalid-tooltip font11">
+		        	Invalid.
 		        </div>
+			</div>
+			<div class="input-group">
 		        <label for="confirm" class="width-full mt-2 text-left font-weight-600">Confirm</label> 
 				<input type="password" id="confirm" ng-model="confirm" pattern=".{6,}"
-					   class="form-control form-control-signin rounded" required> 
-				<div class="invalid-tooltip font12">
-		        	Invalid confirm password
+					   class="form-control form-control-signin rounded" pwds-match-check="password" required> 
+				<div class="invalid-tooltip font11">
+		        	Invalid. Should match 'Password'.
 		        </div>
 			</div>
 			<button class="btn btn-success btn-block mt-4" type="submit">Change password</button>
