--- a/TodoApp/src/main/webapp/customer/pages/root/sign-in/password-do-reset.html
+++ b/TodoApp/src/main/webapp/customer/pages/root/sign-in/password-do-reset.html
@@ -3,7 +3,7 @@
 		<a href="#">
 			<img alt="ToDo App" title="ToDo App" width="72" height="72" class="mb-4 logo-todo-70px d-inline-block"">
 		</a>
-		<h3 class="mb-3 signin-form-header">Change password</h3>
+		<h3 class="mb-3 signin-form-header">{{(changedSuccessfully) ? 'Password changed' : 'Change password'}}</h3>
 		<div class="signin-form-body mt-3 min-width-18rem" ng-hide="!keyVerified || changedSuccessfully">
 			<div class="input-group">
 				<label class="width-full text-left text-mutedsignin-form-body mt-3 min-width-18rem"><strong>Password must contain at least six characters. Case sensitive.</strong></label> 
@@ -27,9 +27,8 @@
 		
 		<div class="signin-form-body mt-3 min-width-19rem" ng-show="changedSuccessfully">
 			<div class="auth-form-body mt-3">
-				<p class="mt-0">Check your email for a link to reset your
-					password. If it doesn’t appear within a few minutes, check your
-					spam folder.</p>
+				<p class="mt-0">Your password have been changed successfully. 
+								Now you can sign in to access your account.</p>
 				<a class="btn btn-block btn-dark" href="#/sign-in"> Return to sign in </a>
 			</div>
 		</div>
