--- a/TodoApp/src/main/webapp/customer/pages/root/sign-in/password-do-reset.html
+++ b/TodoApp/src/main/webapp/customer/pages/root/sign-in/password-do-reset.html
@@ -6,7 +6,7 @@
 		<h3 class="mb-3 signin-form-header">{{(changedSuccessfully) ? 'Password changed' : 'Change password'}}</h3>
 		<div class="signin-form-body mt-3 min-width-18rem" ng-hide="!keyVerified || changedSuccessfully">
 			<div class="input-group">
-				<label class="width-full text-left text-mutedsignin-form-body mt-3 min-width-18rem"><strong>Password must contain at least six characters. Case sensitive.</strong></label> 
+				<label class="width-full text-left text-mutedsignin-form-body"><strong>Password must contain at least six characters. Case sensitive.</strong></label> 
 				<label for="password" class="width-full mt-3 text-left font-weight-600">Password</label> 
 				<input type="password" id="password" ng-model="password" pattern=".{6,}"
 					   class="form-control form-control-signin rounded" required> 
