--- a/TodoApp/src/main/webapp/customer/pages/root/footer/footer-home.html
+++ b/TodoApp/src/main/webapp/customer/pages/root/footer/footer-home.html
@@ -1,4 +1,4 @@
-<footer class="page-footer font-small pt-4 mt-4 bg-dark">
+<footer class="page-footer font-small pt-4 bg-dark">
 
     <!--Footer Links-->
     <div class="container text-center text-md-left">
