--- a/TodoApp/src/main/webapp/customer/pages/secure/dashboard/dashboard.html
+++ b/TodoApp/src/main/webapp/customer/pages/secure/dashboard/dashboard.html
@@ -22,10 +22,23 @@
 	<div class="container">
 		<div class="row pt-3">
 			<div class="col-12">
+				<h1>ToDo List <i class="fas fa-clipboard-list font-2rem"></i></h1>
+				<p class="lead text-normal">Create, group and share your ToDo items within ToDo lists.</p>
+			</div>
+			
+		</div>
+		
+	</div>
+</div>
+
+<!-- Content area -->
+<div class="content-area text-normal">
+	<div class="container">
+		<div class="row pt-3">
+			<div class="col-12">
 				<h1>Connections <i class="fas fa-share-alt-square font-2rem"></i></h1>
 				<p class="lead text-normal">Lorem ipsum lovely template products.</p>
 			</div>
-			
 		</div>
 		
 	</div>
