--- a/TodoApp/src/main/webapp/customer/index.html
+++ b/TodoApp/src/main/webapp/customer/index.html
@@ -14,6 +14,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
 <link rel="stylesheet" type="text/css" href="../common/resources/styles/style.css">
+<link rel="stylesheet" type="text/css" href="../common/resources/styles/style-media.css">
 <script type="text/javascript" src="../common/resources/scripts/script.js"></script>
 
 <script type="text/javascript" src="../common/resources/libs/bower_components/angular/angular.js"></script>
