--- a/TodoApp/src/main/webapp/customer/pages/secure/dashboard/dashboard.html
+++ b/TodoApp/src/main/webapp/customer/pages/secure/dashboard/dashboard.html
@@ -70,7 +70,17 @@
 						<!-- title -->
 						<div class="d-flex justify-content-between">
 							<h5 class="font18 text-bold">{{listItem.name}}</h5>
-							<i class="fas fa-ellipsis-v pl-3 cursor-pointer"></i>
+							<div class="dropdown dropleft">
+								<i class="fas fa-ellipsis-v pl-3 cursor-pointer" id="dropdownMenuButton" data-toggle="dropdown" data-offset="-10,0"></i>
+								<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+									<h6 class="dropdown-header">Quick actions</h6>
+							    	<a class="dropdown-item" href="#">Rename</a>
+								    <a class="dropdown-item" href="#">Edit</a>
+								    <a class="dropdown-item" href="#">Share</a>
+								    <div class="dropdown-divider"></div>
+								    <a class="dropdown-item" href="#">Delete</a>
+							  	</div>
+							</div>
 						</div>
 						<!-- connections -->
 						<ul class="avatars mt-2 mb-4">
