new API /api/user/todo/list/all

--- a/TodoApp/src/main/webapp/customer/pages/secure/dashboard/dashboard.html
+++ b/TodoApp/src/main/webapp/customer/pages/secure/dashboard/dashboard.html
@@ -115,6 +115,19 @@
 	<div class="container">
 		<div class="row pt-3">
 			<div class="col-12">
+				<h1>Data from Server <i class="fas fa-share-alt-square font-2rem"></i></h1>
+				<p class="lead text-normal">{{securedApiResponse}}</p>
+			</div>
+		</div>
+		
+	</div>
+</div>
+
+<!-- Content area -->
+<div class="content-area text-normal pt-5">
+	<div class="container">
+		<div class="row pt-3">
+			<div class="col-12">
 				<h1>Connections <i class="fas fa-share-alt-square font-2rem"></i></h1>
 				<p class="lead text-normal">Lorem ipsum lovely template products.</p>
 			</div>
