Moved oclazyload to Bower

--- a/TodoApp/src/main/webapp/customer/index.html
+++ b/TodoApp/src/main/webapp/customer/index.html
@@ -23,7 +23,7 @@
 <script type="text/javascript" src="../common/resources/libs/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script type="text/javascript" src="../common/resources/libs/bower_components/angular-ui-router-styles/ui-router-styles.js"></script>
 <link rel="stylesheet" href="../common/resources/libs/bower_components/fontawesome/web-fonts-with-css/css/fontawesome-all.css">
-<script type="text/javascript" src="../common/resources/libs/manual/ocLazyLoad/ocLazyLoad.js"></script>
+<script type="text/javascript" src="../common/resources/libs/bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
 <link rel="stylesheet" type="text/css" href="../common/resources/libs/manual/sweetalert/sweetalert.min.css" />
 <link rel="stylesheet" type="text/css" href="../common/resources/libs/manual/toaster/toaster.min.css" />
 <script type="text/javascript" src="../common/resources/libs/manual/sweetalert/sweetalert.min.js"></script>
