Moved sweetalert and toaster libs to Bower

--- a/TodoApp/src/main/webapp/customer/index.html
+++ b/TodoApp/src/main/webapp/customer/index.html
@@ -24,10 +24,11 @@
 <script type="text/javascript" src="../common/resources/libs/bower_components/angular-ui-router-styles/ui-router-styles.js"></script>
 <link rel="stylesheet" href="../common/resources/libs/bower_components/fontawesome/web-fonts-with-css/css/fontawesome-all.css">
 <script type="text/javascript" src="../common/resources/libs/bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
-<link rel="stylesheet" type="text/css" href="../common/resources/libs/manual/sweetalert/sweetalert.min.css" />
-<link rel="stylesheet" type="text/css" href="../common/resources/libs/manual/toaster/toaster.min.css" />
-<script type="text/javascript" src="../common/resources/libs/manual/sweetalert/sweetalert.min.js"></script>
-<script type="text/javascript" src="../common/resources/libs/manual/toaster/toaster.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../common/resources/libs/bower_components/sweetalert/dist/sweetalert.css" />
+<script type="text/javascript" src="../common/resources/libs/bower_components/sweetalert/dist/sweetalert.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../common/resources/libs/bower_components/toaster/toaster.min.css" />
+<script type="text/javascript" src="../common/resources/libs/bower_components/toaster/toaster.min.js"></script>
+
 <script type="text/javascript" src="../common/resources/libs/bower_components/angular-cookies/angular-cookies.min.js"></script>
 
 <script type="text/javascript" src="../common/controllers/root/App.js"></script>
