--- a/TodoApp/src/main/webapp/customer/pages/secure/dashboard/dashboard.html
+++ b/TodoApp/src/main/webapp/customer/pages/secure/dashboard/dashboard.html
@@ -74,11 +74,11 @@
 								<i class="fas fa-ellipsis-v pl-3 cursor-pointer" id="dropdownMenuButton" data-toggle="dropdown" data-offset="-10,0"></i>
 								<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 									<h6 class="dropdown-header">Quick actions</h6>
-							    	<a class="dropdown-item" ng-click="listRename(listItem);">Rename</a>
-								    <a class="dropdown-item" href="#">Edit</a>
-								    <a class="dropdown-item" href="#">Share</a>
+							    	<a class="dropdown-item cursor-pointer" ng-click="listRename(listItem);">Rename</a>
+								    <a class="dropdown-item cursor-pointer">Edit</a>
+								    <a class="dropdown-item cursor-pointer">Share</a>
 								    <div class="dropdown-divider"></div>
-								    <a class="dropdown-item" href="#">Delete</a>
+								    <a class="dropdown-item cursor-pointer" ng-click="listDelete(listItem, $index);">Delete</a>
 							  	</div>
 							</div>
 						</div>
