--- a/TodoApp/src/main/webapp/customer/pages/secure/dashboard/dashboard.html
+++ b/TodoApp/src/main/webapp/customer/pages/secure/dashboard/dashboard.html
@@ -33,7 +33,7 @@
 			<div class="col-12 d-md-flex justify-content-between">
 				<div class="d-flex justify-content-start">
 					<h4>Lists</h4>
-					<button class="btn btn-circle ml-2">
+					<button class="btn btn-circle ml-2" ng-click="createList();">
 			            <i class="fas fa-plus"></i>
 	        	    </button>
 				</div>
